Fix overflow issue

--- a/love/src/components/Layout/Layout.module.css
+++ b/love/src/components/Layout/Layout.module.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 3em;
-  overflow: hidden;
+  overflow: visible;
   display: grid;
   grid-template-columns: min-content 1fr min-content;
 }
@@ -12,6 +12,7 @@
   justify-content: flex-start;
   box-sizing: border-box;
   transition: all 0.5s ease-in-out;
+  height: inherit;
 }
 
 .leftTopbar {
@@ -85,6 +86,7 @@
 .rightNotchContainer {
   display: grid;
   grid-template-columns: min-content 1fr;
+  height: inherit;
 }
 
 .rightTopbar {
@@ -260,4 +262,5 @@
 
 .settingsDropdown .refNode {
   display: contents;
+  position: relative;
 }
